clusters/home/internal/pgadmin/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: pgadmin-external
  namespace: internal
subsets:
  - addresses:
      - ip: 192.168.1.50
    ports:
      - name: http
        port: 9001
