clusters/home/internal/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-external
  namespace: internal

spec:
  ports:
    - name: http
      protocol: TCP
      port: 9001
      targetPort: 9001
  type: ClusterIP
